refactor(mybatis): 清理数据权限拦截器冗余代码